ipc/ipdl/test/ipdl/ok/Parray_OfActorsSub.ipdl
include protocol Parray_OfActors;

protocol Parray_OfActorsSub {
    manager Parray_OfActors;

child: async __delete__();
};
