ipc/ipdl/test/ipdl/error/extra/PManagerManualDeallocManaged.ipdl
include protocol PManagerManualDealloc;

[ManualDealloc]
async protocol PManagerManualDeallocManaged {
    manager PManagerManualDealloc;

child:
    async __delete__();
};
